<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">I Need</string>

    <!--     strings tela de login   -->

    <string name="app_name_tela_login">INeedLogin</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="Esqueceu_a_senha">Esqueceu a senha?</string>

    <!-- strings tela de cadastro-->

    <string name="dados_pessoais">DADOS PESSOAIS</string>
    <string name="Cadastro_usuario">CADASTRO USUÁRIO</string>
    <string name="cadastro_nome_completo">Nome Completo</string>
    <string name="cadastro_cpf">CPF</string>
    <string name="cadastro_RG">RG</string>
    <string name="cadastro_data_nascimento">Data de Nascimento</string>
    <string name="cadastro_estado_Civil">Estado Civil</string>
    <string name="cadastro_sexo">Sexo</string>

    <!-- tela cadastro  parte de dados de acesso as contato-->

    <string name="dados_acesso_contatoC">DADOS DE ACESSO E CONTATO</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_telefone">Telefone</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_confirma_senha">Confirmar Senha</string>

    <!--tela cadastro parte de endereço-->

    <string name="dados_endereco">DADOS DE ENDEREÇO</string>
    <string name="Endereco">ENDEREÇO</string>
    <string name="cadastro_rua">Rua</string>
    <string name="cadastro_numero_moradia">N° Moradia</string>
    <string name="cadastro_referencia_moradia">Referência</string>
    <string name="cadastro_complemento_moradia">Complemento</string>
    <string name="cadastro_CEP">CEP</string>
    <string name="cadastro_bairro">Bairro</string>
    <string name="cadastro_cidade">Cidade</string>
    <string name="cadastro_estado">Estado</string>
    <string name="cadastro_pais">País</string>


    <!--tela cadastro usuario serviço-->

    <string name="cdstServ_nome">Nome Serviço</string>
    <string name="cdstServ_preco">Preço</string>
    <string name="cdstServ_localAtendimento">Local Atendimento</string>
    <string name="cdstServ_atendimentoDomiciliar"> Atendimento á Domicilio </string>
    <string name="cdstServ_MeuProprioEndereco"> Meu Proprio Endereço</string>
    <string name="cdstServ_estimativaTempo">Estimativa de Tempo</string>
    <string name="cdstServ_selecionarCategoria">Selecionar Categoria</string>
    <string name="cdstServ_cadastrar">Cadastrar</string>

    <!--Strings Botões-->
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="bt_logar">Logar</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_proximo">Proximo</string>

    <!--Categorias-->

    <string name="grid_categoria">Explore serviços por categorias</string>
    <string name="grid_auto">Auto</string>
    <string name="grid_construção">Construção</string>
    <string name="grid_entregasEncomendas">Entregas e encomendas</string>
    <string name="grid_Domesticos">Domésticos</string>
    <string name="grid_exteticaModa">Estetica e Moda</string>
    <string name="grid_informaticaTecnologia">Informática e Tecnologia</string>
    <string name="grid_educacao">Educação</string>
    <string name="grid_eventosMusicasDecoracoes">Eventos e Decorações</string>


    <!--==============================APIS================================-->
    <!--Login-->
    <string name="api_login">http://ec2-3-87-223-198.compute-1.amazonaws.com:3001</string>
    <!--RavenCrown-->
    <string name="api_raven_crown">http://ec2-3-87-223-198.compute-1.amazonaws.com:8080/ValeryAPI/</string>


    <!--Servicos-->
    <string name="api_servicos"></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--Detalhes de Servicos-->

    <string name="detalhes_servico">DETALHES DO SERVIÇO</string>
    <string name="nome_servico">Nome:</string>
    <string name="categoria_servico">Categoria:</string>
    <string name="preco_servico">Preço:</string>
    <string name="tempo_servico">Tempo de Execução:</string>
    <string name="localizacao_servico">Localização Fixa:</string>
    <string name="descricao_servico">Descrição:</string>
    <string name="agendar_data">Agendar</string>
    <string name="endereco_servico">Endereço:</string>

    <!--check box-->
    <string name="Ch_solteiro">Solteiro</string>
    <string name="Ch_casado">casado</string>

    <!--contrato-->
    <string name="negocio_fechado">NEGÓCIO FECHADO</string>
    <string name="bt_fechar_contrato">FECHAR NEGÓCIO</string>



</resources>
