<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuarioDadosPessoaisActivity"
    android:background="#34326e">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="64dp"
        android:text="@string/dados_endereco"
        android:textColor="#ff9900"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="363dp"
        android:layout_height="435dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/endereco"
            android:layout_width="123dp"
            android:layout_height="30dp"
            android:text="@string/Endereco"
            android:textColor="#ff9900" />

        <TextView
            android:id="@+id/Rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_rua"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoRua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/NumeroResidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_numero_moradia"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/referencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_referencia_moradia"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoReferecia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_complemento_moradia"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/CEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_CEP"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoCEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/Bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_bairro"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_cidade"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_estado"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <Button
        android:id="@+id/btCadastra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="246dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="122dp"
        android:text="@string/bt_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="#ff9900"/>



</androidx.constraintlayout.widget.ConstraintLayout>