<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuarioDadosPessoaisActivity"
    android:background="#34326e">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Cadastro_usuario"
        android:textColor="#ff9900"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="343dp"
        android:layout_height="370dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/dadosAcessoContato"
            android:layout_width="224dp"
            android:layout_height="30dp"
            android:text="@string/dados_acesso_contatoC"
            android:textColor="#ff9900" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_email"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_telefone"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_senha"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />
        <TextView
            android:id="@+id/confirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_confirma_senha"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />




    </LinearLayout>

    <Button
        android:id="@+id/btProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="246dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="122dp"
        android:text="@string/bt_proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="#ff9900"/>



</androidx.constraintlayout.widget.ConstraintLayout>